# Robots

./: .gitignore  DEPENDENCY_ANALYSIS.md  QUICKSTART.md  README.md  RETARGETING_HOWTO.md  activate_robots_env.sh  analyze_conversion.py  dummy_motion.pkl  env_check.py  env_config.md  environment.yml  environment_CPU.yml  environment_mujoco3.yml  environment_qp_done.yml  requirements.txt  run_full_retargeting.sh
bvh_mujoco/: environment_bvh_mujoco.yml  play_bvh_in_mujoco.py
offlineConv/: convert_bvh_to_pickle.py  readme.md
progress/: install_progress_12241548.md
src/: bvh_rviz_config.rviz  bvh_to_rviz.py  generate_dummy_motion.py  simulate_xsens_bvh.py  vis_robot_motion.py
src/deploy_controller/: package.xml  setup.cfg  setup.py
src/deploy_controller/config/: g1_params.yaml
src/deploy_controller/deploy_controller/: g1_controller.py  g1_mujoco_play.py  g1_mujoco_play1.py
src/deploy_controller/launch/: g1_controller.launch.py
src/motion_retargeting/: setup.cfg  setup.py
src/motion_retargeting/launch/: retargeting_launch.py
src/motion_retargeting/motion_retargeting/: data_subscriber.py
src/motion_retargeting/motion_retargeting/config/: mapped_ik_config.py  wbik_config.py
src/motion_retargeting/motion_retargeting/config/robot/: g1.py  hi1.py
src/motion_retargeting/motion_retargeting/config/robot/models/: AzureLoong_edited.xml  AzureLoong_float_edited.xml  g1_edited.xml  h1_edited.xml  hi_1_edited.xml
src/motion_retargeting/motion_retargeting/retarget/: __init__.py  retarget.py  retarget_online.py
src/motion_retargeting/motion_retargeting/utils/: merge_video.py  quat_utils.py  torch_fk.py  trajectory.py  wbik_solver.py
src/motion_retargeting/motion_retargeting/utils/mujoco/: marker_set.py  model_editor.py
src/motion_retargeting/robots/: 文件夹说明.txt
src/motion_retargeting/robots/H1_URDF/meshes/: ASTRAGALUS_R.STL  NECK.STL  THIGH_L.STL  UPPERARM_L.STL  UPPERARM_R.STL  WRIST_REVOLUTE_R.STL  WRIST_UPDOWN_R.STL
src/motion_retargeting/robots/OGHR/urdf/: OGHR_wholeBody.urdf  OGHR_wholeBody_Simplified30dof.urdf
src/motion_retargeting/robots/R1/: CMakeLists.txt
src/motion_retargeting/robots/R1/config/: joint_names_r1_v2_1_0.yaml
src/motion_retargeting/robots/R1/launch/: display.launch
src/motion_retargeting/robots/g1/urdf/: g1.urdf  g1.xml  g1_new.xml
src/motion_retargeting/robots/h1_3/urdf/: h1.urdf  h1.xml  h1_b.xml
src/motion_retargeting/robots/hi_1/meshes/: FOOT_L.STL  HAND_L.STL  ISCHIUM_L.STL  ISCHIUM_R.STL  SCAPULA_L.STL  WRIST_REVOLUTE_L.STL
src/motion_retargeting/robots/hi_1/urdf/: Hi_1.urdf
src/motion_retargeting_Jeff/: package.xml  setup.py
src/motion_retargeting_Jeff/motion_retargeting/: bvh_parser.py  mujoco_play.py  retargeting_visualizer.py
src/motion_retargeting_Jeff/motion_retargeting/config/: bvh_retarget_config.py  wbik_config.py
src/motion_retargeting_Jeff/motion_retargeting/config/robot/: g11.py  h1.py  loong.py
src/motion_retargeting_Jeff/motion_retargeting/config/robot/models/: AzureLoong_edited.xml  g1.xml  h1_edited.xml  h1_edited0.xml  hi_1_edited.xml
src/motion_retargeting_Jeff/motion_retargeting/utils/: mapped_ik.py  trajectory_hdf5.py  velocity_estimator.py  wbik_solver2.py
src/motion_retargeting_Jeff/motion_retargeting/utils/mujoco/: renderer.py
src/motion_retargeting_Jeff/robots/H1_URDF/meshes/: FOOT_R.STL  FOREARM_R.STL  HAND_R.STL  HEAD.STL  ILIUM_L.STL  ILIUM_R.STL  SHOULDER_L.STL  SHOULDER_R.STL  THIGH_R.STL
src/motion_retargeting_Jeff/robots/H1_URDF/urdf/: Hi_1.urdf
src/motion_retargeting_Jeff/robots/OGHR/urdf/: OGHR_wholeBody_Simplified12dof.xml
src/motion_retargeting_Jeff/robots/R1/: package.xml
src/motion_retargeting_Jeff/robots/R1/launch/: gazebo.launch
src/motion_retargeting_Jeff/robots/R1/urdf/: r1_v2_1_0.csv  r1_v2_1_0.urdf
src/motion_retargeting_Jeff/robots/hi_1/meshes/: ASTRAGALUS_L.STL  FOREARM_L.STL  SACRUM.STL  SCAPULA_R.STL  SHANK_L.STL  SHANK_R.STL  WRIST_UPDOWN_L.STL
src/motion_retargeting_Jeff/robots/hi_1/urdf/: hi_1.xml
src/motion_retargeting_Jeff/robots/openloong/: AzureLoong_float.xml
src/xsens_mvn_ros2/docs/sphinx/source/: index.rst  kinematic_chain.rst  setup.rst  usage.rst
src/xsens_mvn_ros2/xsens_mvn_ros/: CMakeLists.txt  package.xml
src/xsens_mvn_ros2/xsens_mvn_ros/launch/: xsens_client.launch.py  xsens_client.launch.xml
src/xsens_mvn_ros2/xsens_mvn_ros/src/: xsens_client_node.cpp
src/xsens_mvn_ros2/xsens_mvn_ros/src/xsens_client/: XSensClient.cpp
src/xsens_mvn_ros2/xsens_mvn_ros/xsens_mvn_sdk/: CMakeLists.txt
src/xsens_mvn_ros2/xsens_mvn_ros/xsens_mvn_sdk/include/xsens_mvn_sdk/: datagram.h
src/xsens_mvn_ros2/xsens_mvn_ros/xsens_mvn_sdk/src/: angularsegmentkinematicsdatagram.cpp  eulerdatagram.cpp  jointanglesdatagram.cpp  linearsegmentkinematicsdatagram.cpp  metadatagram.cpp  positiondatagram.cpp  quaterniondatagram.cpp  scaledatagram.cpp  trackerkinematicsdatagram.cpp
src/xsens_mvn_ros2/xsens_mvn_ros_msgs/: CMakeLists.txt  package.xml
src/xsens_mvn_ros2/xsens_mvn_ros_msgs/msg/: LinkStateArray.msg
tools/: download_offline_packages.sh  record_preview.py  record_preview_headless.py
