<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xsens_mvn_ros</name>
  <version>0.0.1</version>
  <description>The xsens_mvn_ros package</description>

  <maintainer email="mattia.leonori@iit.it">Mattia Leonori</maintainer>
  <maintainer email="marta.lorenzini@iit.it">Marta Lorenzini</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/hrii-iit/xsens_mvn_ros</url>
  <author email="mattia.leonori@iit.it">Mattia Leonori</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen3</depend>
  <depend>boost</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>xsens_mvn_ros_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>