<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>xsens_mvn_ros_msgs</name>
    <version>0.0.1</version>
    <description>xsens_mvn_ros_msgs provides messages for XSens Awinda suit such as link states.</description>

    <maintainer email="mattia.leonori@iit.it">Mattia Leonori</maintainer>
    <maintainer email="marta.lorenzini@iit.it">Marta Lorenzini</maintainer>

    <license>BSD</license>

    <url>https://github.com/hrii-iit/xsens_mvn_ros_msgs</url>
    <author email="mattia.leonori@iit.it">Mattia Leonori</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>